src/objects/appsolutely__Business_Dossier__c.object
<CustomObject>
    <fields>
        <fullName>appsolutely__Postal_Code__c</fullName>
        <description>The postal code this organisation resides according to CreditSafe</description>
        <inlineHelpText>The postal code this organisation resides according to CreditSafe</inlineHelpText>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Primary_Sbi_Code_Text__c</fullName>
        <label>Primary SBI Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Primary_Sbi_Code__c</fullName>
        <label>Primary SBI Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Profit__c</fullName>
        <description>The profit realised in the financial year DutchBusinessMoneyV2</description>
        <label>Profit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Registration_Country__c</fullName>
        <inlineHelpText>The country in which this organisation has been registered</inlineHelpText>
        <label>Registration Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>appsolutely__Registration_Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>appsolutely__Rsin_Number__c</fullName>
        <description>The 9 number RSIN (`Rechtspersonen Samenwerkingsverbanden Informatie Nummer`) identifying the business’ legal entity.  Optional, businesses with a sole proprietor (`eenmanszaken`) do not have an rsin_number.</description>
        <label>RSIN Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Sbi_Collection__c</fullName>
        <description>Collection of SBI’s DutchBusinessSBICollection</description>
        <label>Sbi_Collection</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>appsolutely__Search_Criteria_Name__c</fullName>
        <description>Contains the name of the search criteria</description>
        <label>Search Criteria Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Secondary_Sbi_Code_1_Text__c</fullName>
        <label>Secondary SBI Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Secondary_Sbi_Code_1__c</fullName>
        <label>Secondary SBI Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Secondary_Sbi_Code_2_Text__c</fullName>
        <label>Tertiary SBI Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Secondary_Sbi_Code_2__c</fullName>
        <label>Tertiary SBI Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Status__c</fullName>
        <description>Indicates the Status of a company (Import, Export, Economically Active, Non mailing, Bankruptcy, Debtor in Possession (DIP))</description>
        <label>Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Import</fullName>
                </value>
                <value>
                    <fullName>Export</fullName>
                </value>
                <value>
                    <fullName>Economically Active</fullName>
                </value>
                <value>
                    <fullName>Non Mailing</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>DIP</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Active, NonActive</fullName>
                </value>
                <value>
                    <fullName>NonActive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>appsolutely__Street__c</fullName>
        <description>The street this organisation resides in according to CreditSafe</description>
        <inlineHelpText>The street this organisation resides in according to CreditSafe</inlineHelpText>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Structure__c</fullName>
        <description>Information regarding the structure of the organization DutchBusinessStructure.</description>
        <label>Structure</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>appsolutely__Telephone_Number__c</fullName>
        <description>Telephone number of the establishment.</description>
        <label>Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>appsolutely__Trade_Name_45__c</fullName>
        <description>Primary name under which the business engages in commercial activity.  Shortened to a maximum of 45 characters.</description>
        <label>Trade Name</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Trade_Name_Full__c</fullName>
        <description>Primary name under which the business engages in commercial activity.  This is the full name, up to 132 characters long.</description>
        <label>Trade Name Full</label>
        <length>132</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Trade_Names__c</fullName>
        <description>Alternative trade names used by the establishment.</description>
        <label>Trade Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>appsolutely__Turnover__c</fullName>
        <description>The turnover realised in the financial year DutchBusinessMoneyV2</description>
        <label>Turnover</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Type__c</fullName>
        <inlineHelpText>The type of the organisation (Ltd, NonLtd etc.)</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Ultimate_Parent_Chamber_Of_Commerce_Nr__c</fullName>
        <description>The Chamber of Commerce number of the ultimate parent organization.  This number consists of 8 numbers (e.g., 00123456).  This number can be used to retrieve the ultimate parent organization using: dutchBusinessGetDossierV2 or dutchBusinessGetDossier</description>
        <label>Ultimate Parent Chamber Of Commerce Nr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__VAT_Number__c</fullName>
        <description>The VAT Number for a specified dossier number</description>
        <label>VAT Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Year__c</fullName>
        <description>The year covered in the financial statement</description>
        <label>Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Business Dossier</label>
    <nameField>
        <label>Legal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Dossiers</pluralLabel>
    <recordTypes>
        <fullName>appsolutely__Belgian_Business</fullName>
        <active>true</active>
        <description>Record type for dossiers coming from Company Info Belgian Business web services</description>
        <label>Belgian Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>appsolutely__Creditsafe</fullName>
        <active>true</active>
        <description>Record type for dossiers coming from CreditSafe itself.</description>
        <label>Creditsafe</label>
    </recordTypes>
    <recordTypes>
        <fullName>appsolutely__Dutch_Business</fullName>
        <active>true</active>
        <description>Record type for dossiers coming from Company Info itself.</description>
        <label>Dutch Business</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>